[gd_scene load_steps=11 format=3 uid="uid://mfdy4g3u2vk"]

[ext_resource type="Script" path="res://assets/scripts/player.gd" id="1_6sq4q"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rafdm"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_eo60d"]
height = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_ro3cs"]

[sub_resource type="Curve" id="Curve_w1t65"]
_data = [Vector2(0, 0.483516), 100000.0, 0.0, 1, 0, Vector2(1, 0), -0.648945, 100000.0, 0, 1]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_wfgjv"]
curve = SubResource("Curve_w1t65")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_y2oe5"]
emission_shape = 2
emission_sphere_radius = 0.5
radial_velocity_min = -2.0
radial_velocity_max = -2.0
gravity = Vector3(0, 0, 0)
damping_min = 8.0
damping_max = 8.0
scale_curve = SubResource("CurveTexture_wfgjv")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ndqbj"]
albedo_color = Color(0.109804, 0, 0.235294, 1)
metallic = 1.0
metallic_texture_channel = 3
roughness = 0.82

[sub_resource type="SphereMesh" id="SphereMesh_3k7m6"]
material = SubResource("StandardMaterial3D_ndqbj")

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_0nhrb"]

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource("1_6sq4q")

[node name="StandingHitbox" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_rafdm")

[node name="StandingHeadMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="SlidingHitbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("CapsuleShape3D_eo60d")
disabled = true

[node name="SlidingHeadMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="GrappleHook" type="StaticBody3D" parent="."]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 1.5, 0)
top_level = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="GrappleHook"]
shape = SubResource("SphereShape3D_ro3cs")
disabled = true

[node name="GPUParticles3D" type="GPUParticles3D" parent="GrappleHook"]
amount = 24
lifetime = 0.8
process_material = SubResource("ParticleProcessMaterial_y2oe5")
draw_pass_1 = SubResource("SphereMesh_3k7m6")

[node name="OmniLight3D" type="OmniLight3D" parent="GrappleHook"]
light_color = Color(0.584314, 0.227451, 0.901961, 1)
light_energy = 8.0
omni_range = 1.192

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
cull_mask = 1048559

[node name="Grapple" type="SpringArm3D" parent="Head"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
shape = SubResource("SeparationRayShape3D_0nhrb")
spring_length = 16.0
margin = -1.0

[node name="GrapplePoint" type="RemoteTransform3D" parent="Head/Grapple"]
unique_name_in_owner = true
remote_path = NodePath("../../../GrappleHook")
update_rotation = false
update_scale = false

[node name="DashCooldown" type="Timer" parent="."]
process_callback = 0
one_shot = true

[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_timer_timeout"]
